# c64-cli

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
.circleci/: config.yml
cmake/: functions.cmake
examples/: CMakeLists.txt
examples/c64/: CMakeLists.txt
examples/c64/cli/: CMakeLists.txt
examples/c64/cli/src/: CMakeLists.txt  console_log.cc  counted_breakpoint_argument.hh  integer.hh  main.cc
examples/c64/gui/: CMakeLists.txt
examples/c64/gui/src/: CMakeLists.txt  control_tab.cc  control_tab.hh  main.cc  main_window.cc  main_window.hh
examples/c64/hw/: CMakeLists.txt
examples/c64/hw/src/: CMakeLists.txt  c64.cc  c64.hh
examples/c64/hw/src/cpu/: CMakeLists.txt  mos_6510.cc  mos_6510.hh  mos_6510_flags.hh
examples/c64/hw/src/cpu/instructions/: CMakeLists.txt  adc.cc  adc.hh  and.cc  and.hh  arith_instruction.cc  arith_instruction.hh  asl.cc  asl.hh  bcc.cc  bcc.hh  bcs.cc  bcs.hh  beq.cc  beq.hh  bit.cc  bit.hh  bmi.cc  bmi.hh  bne.cc  bne.hh  bpl.cc  bpl.hh  branch_instruction.hh  brk.cc  brk.hh  bvc.cc  bvc.hh  bvs.cc  bvs.hh  clc.cc  clc.hh  cld.cc  cld.hh  cli.cc  cli.hh  clv.cc  clv.hh  cmp.cc  cmp.hh  (+82 more)
examples/c64/hw/src/memory/: CMakeLists.txt  compound_memory.cc  compound_memory.hh  flat_memory.cc  flat_memory.hh  memory.cc  memory.hh
examples/c64/src/: CMakeLists.txt  c64.cc  c64.hh  main.cc
examples/c64/src/cpu/: CMakeLists.txt  mos_6502.cc  mos_6502.hh  mos_6502_decoder.cc  mos_6502_decoder.hh  mos_6510.cc  mos_6510.hh  mos_6510_decoder.cc  mos_6510_decoder.hh  mos_6510_flags.hh
examples/c64/src/cpu/instructions/: CMakeLists.txt  _template.cc  _template.hh  adc.cc  adc.hh  and.cc  and.hh  arith_instruction.cc  arith_instruction.hh  asl.cc  asl.hh  bcc.cc  bcc.hh  bcs.cc  bcs.hh  beq.cc  beq.hh  bit.cc  bit.hh  bmi.cc  bmi.hh  bne.cc  bne.hh  bpl.cc  bpl.hh  branch_instruction.hh  brk.cc  brk.hh  bvc.cc  bvc.hh  bvs.cc  bvs.hh  clc.cc  clc.hh  cld.cc  cld.hh  cli.cc  cli.hh  clv.cc  clv.hh  (+87 more)
examples/c64/src/hw/: CMakeLists.txt
examples/c64/src/hw/cpu/: mos_6510.cc
examples/c64/src/hw/cpu/instructions/: CMakeLists.txt  adc.hh  asl.hh  bcc.cc  bcc.hh  bcs.cc  bcs.hh  beq.cc  bit.cc  bmi.hh  bne.hh  bpl.cc  branch_instruction.hh  bvs.cc  clc.cc  clc.hh  cmp.hh  cpx.hh  cpy.hh  dec.cc  dey.cc  inc.hh  instruction_step.cc  instruction_step.hh  inx.hh  iny.hh  jmp.cc  jsr.cc  jsr.hh  lda.hh  ldx.cc  ldx.hh  ldy.cc  lsr.cc  modify_instruction.hh  nop.cc  pha.cc  pha.hh  php.cc  php.hh  (+21 more)
examples/c64/src/hw/memory/: memory.hh
examples/c64/src/memory/: memory.cc  memory.hh
examples/c64/src/ui/: CMakeLists.txt  control_tab.cc  control_tab.hh  log_window.cc  log_window.hh  main_window.cc  main_window.hh  qt_log.cc  qt_log.hh
examples/simple_system/: CMakeLists.txt
examples/simple_system/src/: CMakeLists.txt  simple_computer_system.cc  simple_computer_system.hh  simple_cpu.cc  simple_cpu.hh  simple_system.cc
harpoon/: CMakeLists.txt  Doxyfile.in
harpoon/include/harpoon/: computer_system.hh  hardware_component.hh  harpoon.hh
harpoon/include/harpoon/clock/: clock.hh  cycle.hh  threaded_clock.hh  tick.hh
harpoon/include/harpoon/clock/generator/: dummy_generator.hh  generator.hh  threaded_generator.hh
harpoon/include/harpoon/exception/: hardware_component_exception.hh  harpoon_exception.hh
harpoon/include/harpoon/execution/: basic_register.hh  breakpoint.hh  cpu.hh  cycle.hh  execution_unit.hh  instruction.hh  instruction_decoder.hh  instruction_disassembler.hh  instruction_invoker.hh  processing_unit.hh  up_execution_unit.hh
harpoon/include/harpoon/execution/exception/: execution_exception.hh  invalid_instruction.hh
harpoon/include/harpoon/log/: console_log.hh  log.hh  message.hh
harpoon/include/harpoon/memory/: address.hh  address_range.hh  chunked_memory.hh  chunked_random_access_memory.hh  chunked_read_only_memory.hh  io_memory.hh  linear_memory.hh  linear_random_access_memory.hh  linear_read_only_memory.hh  main_memory.hh  memory.hh  multiplexed_memory.hh  random_access_memory.hh  read_only_memory.hh
harpoon/include/harpoon/memory/deserializer/: binary_file.hh  deserializer.hh
harpoon/include/harpoon/memory/deserializer/exception/: bad_block_range.hh  io.hh
harpoon/include/harpoon/memory/exception/: access_violation.hh  memory_exception.hh  multiplexer_error.hh  read_access_violation.hh  write_access_violation.hh
harpoon/include/harpoon/memory/serializer/: binary_file.hh  serializer.hh
harpoon/include/harpoon/memory/serializer/exception/: bad_block_range.hh
harpoon/src/: CMakeLists.txt  computer_system.cc  hardware_component.cc
harpoon/src/clock/: CMakeLists.txt  clock.cc  threaded_clock.cc
harpoon/src/clock/generator/: CMakeLists.txt  dummy_generator.cc  generator.cc  threaded_generator.cc
harpoon/src/exception/: CMakeLists.txt  hardware_component_exception.cc  harpoon_exception.cc
harpoon/src/execution/: CMakeLists.txt  cpu.cc  execution_unit.cc  processing_unit.cc  up_execution_unit.cc
harpoon/src/execution/exception/: CMakeLists.txt  execution_exception.cc  invalid_instruction.cc
harpoon/src/log/: CMakeLists.txt  console_log.cc  log.cc  message.cc
harpoon/src/memory/: CMakeLists.txt  chunked_memory.cc  chunked_random_access_memory.cc  chunked_read_only_memory.cc  linear_memory.cc  linear_random_access_memory.cc  linear_read_only_memory.cc  main_memory.cc  memory.cc  multiplexed_memory.cc
harpoon/src/memory/deserializer/: CMakeLists.txt  binary_file.cc  deserializer.cc
harpoon/src/memory/deserializer/exception/: CMakeLists.txt  bad_block_range.cc  io.cc
harpoon/src/memory/exception/: CMakeLists.txt  access_violation.cc  memory_exception.cc  multiplexer_error.cc  read_access_violation.cc  write_access_violation.cc
harpoon/src/memory/serializer/: CMakeLists.txt  binary_file.cc  serializer.cc
harpoon/src/memory/serializer/exception/: bad_block_range.cc
src/: console_log.hh  integer.hh  load_argument.hh  main.cc
